--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@tanstack/vue-query": "^4.29.5",
+    "@vavt/md-editor-extension": "^3.0.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "md-editor-v3": "^3.0.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-markdown-render": "^2.0.1",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
+    "@types/marked": "^4.3.0",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
