--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@quasar/app-vite": "^1.0.0",
     "@types/marked": "^4.3.0",
     "@types/node": "^12.20.21",
